fix header layout bug

--- a/src/less/globals/header.import.less
+++ b/src/less/globals/header.import.less
@@ -211,11 +211,6 @@ header {
 
 
 .headroom {
-	position: absolute;
-	left: 0;
-	top:0;
-	width: 1940px;
-	z-index: 100;
 	.transition( transform 00ms linear );
 }
 
